# open-compute-fabric-rs

./: .gitignore  Cargo.toml  README.md
crates/ocf-api/: Cargo.toml
crates/ocf-api/src/: authz.rs  config.rs  controller.rs  dto.rs  error.rs  fleet.rs  lib.rs  persist.rs  routes.rs
crates/ocf-auth/: Cargo.toml
crates/ocf-auth/src/: authenticator.rs  exec.rs  hostsync.rs  identity.rs  lib.rs
crates/ocf-auth/src/providers/: ad.rs  local.rs  mod.rs  pam.rs
crates/ocf-authz/: Cargo.toml
crates/ocf-authz/src/: engine.rs  lib.rs  model.rs  permission.rs
crates/ocf-consensus/: Cargo.toml
crates/ocf-consensus/src/: fabric_net.rs  lib.rs  network.rs  storage.rs  store.rs  types.rs
crates/ocf-consensus/tests/: cluster.rs
crates/ocf-core/: Cargo.toml
crates/ocf-core/src/: error.rs  health.rs  id.rs  lib.rs  metadata.rs  quantity.rs  registry.rs  resource.rs  scope.rs
crates/ocf-disk/: Cargo.toml
crates/ocf-disk/src/: led.rs  lib.rs  manager.rs  model.rs  service.rs
crates/ocf-fabric/: Cargo.toml
crates/ocf-fabric/examples/: fabric_bench.rs
crates/ocf-fabric/src/: crypto.rs  lib.rs  membership.rs  mesh.rs  node.rs  routing.rs  server.rs  transport.rs  wire.rs
crates/ocf-health/: Cargo.toml
crates/ocf-health/src/: check.rs  exec.rs  finding.rs  lib.rs  service.rs
crates/ocf-health/src/checks/: bridge_netfilter.rs  config.rs  docker.rs  ip_forwarding.rs  mod.rs  netfilter.rs  package.rs  security_update.rs  vulnerability.rs
crates/ocf-inventory/: Cargo.toml
crates/ocf-inventory/src/: collector.rs  component.rs  exec.rs  ipmi.rs  lib.rs  service.rs
crates/ocf-kernel/: Cargo.toml
crates/ocf-kernel/src/: exec.rs  firewall.rs  lib.rs  network.rs  service.rs
crates/ocf-loadbalancer/: Cargo.toml
crates/ocf-loadbalancer/src/: certs.rs  controller.rs  dns.rs  lib.rs  model.rs  proxy.rs  routing.rs
crates/ocf-monitoring/: Cargo.toml
crates/ocf-monitoring/src/: collector.rs  lib.rs  procfs.rs  sample.rs  service.rs
crates/ocf-network/: Cargo.toml
crates/ocf-network/src/: backend.rs  controller.rs  ipam.rs  lib.rs  model.rs  wireguard.rs
crates/ocf-platform/: Cargo.toml
crates/ocf-platform/src/: capability.rs  lib.rs  managers.rs  os.rs  osv.rs  package.rs  service.rs  update.rs
crates/ocf-runtime/: Cargo.toml
crates/ocf-runtime/src/: autoscaler.rs  lib.rs  migration.rs  provider.rs  workload.rs
crates/ocf-runtime/src/providers/: command.rs  docker.rs  lxc.rs  mod.rs  podman.rs  qemu.rs
crates/ocf-store/: Cargo.toml
crates/ocf-store/src/: lib.rs  memory.rs  redb_store.rs
crates/ocf-topology/: Cargo.toml
crates/ocf-topology/src/: lib.rs  model.rs  store.rs
crates/ocfd/: Cargo.toml
crates/ocfd/src/: main.rs
docs/: README.md  architecture.md
docs/architecture/: contracts-and-plugins.md  distributed-control-plane.md  domain-model.md  overview.md  request-lifecycle.md  scopes-and-placement.md
docs/changelog/: 2026-06-21.md  2026-06-22.md  README.md
docs/development/: building.md  contributing.md  project-layout.md  testing.md
docs/frontend/: api-client.md  overview.md
docs/getting-started/: concepts.md  configuration.md  installation.md  quickstart.md  using-the-fabric.md
docs/operations/: deployment.md  security.md
docs/reference/: cli.md  configuration.md  error-codes.md  glossary.md  rest-api.md
docs/subsystems/: ocf-api.md  ocf-auth.md  ocf-authz.md  ocf-consensus.md  ocf-core.md  ocf-disk.md  ocf-fabric.md  ocf-health.md  ocf-inventory.md  ocf-kernel.md  ocf-loadbalancer.md  ocf-monitoring.md  ocf-network.md  ocf-platform.md  ocf-runtime.md  ocf-store.md  ocf-topology.md  ocfd.md
web/: .env.example  .gitignore  README.md  nuxt.config.ts  package-lock.json  package.json  tailwind.config.js
web/assets/css/: tailwind.css
web/components/: HealthBadge.vue  PageHeader.vue  ResourceTable.vue  StatCard.vue  TreeNode.vue
web/composables/: mockData.ts  types.ts  useApi.ts  useFormat.ts
web/layouts/: default.vue
web/pages/: access.vue  health.vue  index.vue  loadbalancers.vue  networking.vue  storage.vue  topology.vue  workloads.vue
