[package]
name = "ocf-auth"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Authentication providers and host-account synchronization for the fabric."

[dependencies]
ocf-core.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true
# Real authentication and host-account operations (pamtester, ldapwhoami,
# useradd/usermod/userdel) shell out via `tokio::process::Command`; the workspace
# already pins tokio (previously used here only as a dev-dependency for the
# `#[tokio::test]` harness), so this only promotes it to a build dependency
# rather than adding a new crate.
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
