[package]
name = "ocf-authz"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "RBAC: roles, groups, users and scoped role bindings with a pluggable Authorizer contract."

[dependencies]
ocf-core.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true

[dev-dependencies]
tokio.workspace = true
