[package]
name = "ocf-consensus"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Raft-replicated control-plane key/value store (openraft) applied into an ocf-store StateStore."

[dependencies]
ocf-core.workspace = true
ocf-store.workspace = true
ocf-fabric.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tracing.workspace = true
async-trait.workspace = true
openraft = { version = "0.9", features = ["serde", "storage-v2"] }
