[package]
name = "ocf-disk"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Physical disk inventory, SMART health, LED control, and RMA tracking."

[dependencies]
ocf-core.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true
# Real host operations (lsblk, smartctl, ledctl) shell out via
# `tokio::process::Command`; the workspace already pins tokio (used as a
# dev-dependency for the `#[tokio::test]` harness), so this only promotes it to a
# build dependency rather than adding a new crate.
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
