[package]
name = "ocf-monitoring"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Host and per-runtime resource metrics: collection, aggregation, and autoscaler feed."

[dependencies]
ocf-core.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
tracing.workspace = true
# Used by the host/runtime collectors for the inter-sample sleep
# (`tokio::time`) and to shell out to `df` / `docker stats`
# (`tokio::process::Command`). Already a workspace dependency — no new external
# crate is introduced.
tokio.workspace = true

[dev-dependencies]
tokio.workspace = true
