[package]
name = "ocf-topology"
version.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
description = "Fleet topology model: region -> datacenter -> rack -> machine, with drill-down."

[dependencies]
ocf-core.workspace = true
serde.workspace = true
async-trait.workspace = true
chrono.workspace = true
parking_lot.workspace = true
